# scanner-fixer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  scanner_fixer.py
.github/workflows/: benchmark.yml  ci.yml
docs/: development-chat.md
src/scanner_fixer/: __init__.py  cli.py  crop.py  deskew.py  enhance.py  pipeline.py  rotate.py
tests/: __init__.py  test_scanner_fixer.py
verification/: ARABIC_BENCHMARK.md  ARABIC_OCR_BENCHMARK.md  OCR_BENCHMARK.md  REAL_SCANS_DIAGNOSTIC.md  VERIFICATION.md  arabic_benchmark_results.json  arabic_ocr_benchmark.json  e2e_verify.py  ocr_benchmark_results.json  real_scans_diagnostic.json
